feat: password reset by code
Reviewed-on: https://codeberg.org/allauth/django-allauth/pulls/4270
Co-committed-by: Raymond Penners <raymond.penners@intenct.nl>
